[package]
name = "libra_api"
version = "0.1.0"
edition = "2021"
authors = ["Seok Won <ikr@kakao.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix-http = "3"
actix-web = "4"
actix-cors = "0.6"
serde_derive = "1.0"
anyhow = "1.0.70"

async-openai = "0.10.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.28"
lazy_static = "1.4.0"
cached = "0.43.0"
actix-files = "0.6.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false